@@ -40,6 +40,7 @@ import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -48,7 +49,6 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.lucene.tests.util.TestUtil;
@@ -509,8 +509,8 @@ public class AuditLoggerIntegrationTest extends SolrCloudAuthTestCase {
       boolean async, String semaphoreName, boolean enableAuth, String... muteRulesJson)
       throws Exception {
     String securityJson =
-        FileUtils.readFileToString(
-            TEST_PATH().resolve("security").resolve("auditlog_plugin_security.json").toFile(),
+        Files.readString(
+            TEST_PATH().resolve("security").resolve("auditlog_plugin_security.json"),
             StandardCharsets.UTF_8);
     securityJson = securityJson.replace("_PORT_", Integer.toString(testHarness.get().callbackPort));
     securityJson = securityJson.replace("_ASYNC_", Boolean.toString(async));
